--- a/panel/src/app/components/collaborator/create-collaborator/create-collaborator.component.html
+++ b/panel/src/app/components/collaborator/create-collaborator/create-collaborator.component.html
@@ -1,1 +1,225 @@
-<p>create-collaborator works!</p>
+<div class="d-flex flex-column flex-root">
+  <div class="d-flex flex-row flex-column-fluid page">
+    <app-sidebar></app-sidebar>
+    <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
+      <app-top></app-top>
+      <!--begin::Content-->
+      <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Subheader-->
+        <div class="subheader py-2 py-lg-4 subheader-solid" id="kt_subheader">
+          <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <!--begin::Info-->
+            <div class="d-flex align-items-center flex-wrap mr-2">
+              <!--begin::Page Title-->
+              <h5 class="text-dark font-weight-bold mt-2 mb-2 mr-5">Dashboard</h5>
+              <!--end::Page Title-->
+              <!--begin::Actions-->
+              <div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
+              <span class="text-muted font-weight-bold mr-4">#XRS-45670</span>
+              <a href="#" class="btn btn-light-warning font-weight-bolder btn-sm">Add New</a>
+              <!--end::Actions-->
+            </div>
+            <!--end::Info-->
+
+          </div>
+        </div>
+        <!--end::Subheader-->
+        <!--begin::Entry-->
+        <div class="d-flex flex-column-fluid">
+          <!--begin::Container-->
+          <div class="container">
+            <div class="card card-custom card-shadowless rounded-top-0">
+              <!--begin::Body-->
+              <div class="card-header border-0 pt-5">
+                <h3 class="card-title align-items-start flex-column">
+                  <span class="card-label font-weight-bolder text-dark">New collaborator</span>
+                  <span class="text-muted mt-3 font-weight-bold font-size-sm">New collaborator form</span>
+                </h3>
+                <div class="card-toolbar">
+                  <a class="btn btn-primary" [routerLink]="['/collaborator']" >Back</a>
+                </div>
+              </div>
+              <div class="card-body p-0">
+                <div class="row justify-content-center py-8 px-8 py-lg-15 px-lg-10">
+                  <div class="col-xl-12 col-xxl-10">
+                    <!--begin::Wizard Form-->
+                    <form class="form" id="kt_form" #registerFormCollaborator="ngForm" (ngSubmit)="saveCollaborator(registerFormCollaborator)">
+                      <ngx-spinner bdColor="rgba(178,168,168,0.8)" size="medium" color="#fff" type = "line-scale-party" [fullScreen] = "false">
+                        <p style="font-size: 20px; color: white">Loading...</p>
+                      </ngx-spinner>
+                      <div class="row justify-content-center">
+                        <div class="col-xl-9">
+                          <!--begin::Wizard Step 1-->
+                          <div class="my-5 step" data-wizard-type="step-content" data-wizard-state="current">
+                            <h5 class="text-dark font-weight-bold mb-10">Datos personales:</h5>
+
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Name*</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <input class="form-control required form-control-solid form-control-lg" name="name" [(ngModel)]="collaborator.name" type="text" placeholder="Name or names"/>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Surnames*</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <input class="form-control form-control-solid required form-control-lg" name="surnames" [(ngModel)]="collaborator.surnames" type="text" placeholder="Surnames"/>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Genre*</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <select name="genre" required class="form-control form-control-solid form-control-lg" [(ngModel)]="collaborator.genre">
+                                  <option value="" selected disabled>Select one genre</option>
+                                  <option value="Male">Male</option>
+                                  <option value="Female">Female</option>
+                                </select>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">E-mail*</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <input class="form-control form-control-solid form-control-lg" required name="email" [(ngModel)]="collaborator.email" type="email" placeholder="E-mail"/>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Phone</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <div class="input-group input-group-solid input-group-lg">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                      <i class="la la-phone"></i>
+                                    </span>
+                                  </div>
+                                  <input type="phone" class="form-control form-control-solid form-control-lg" name="phone" [(ngModel)]="collaborator.phone" placeholder="Phone"/>
+                                </div>
+
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Document</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <div class="input-group input-group-solid input-group-lg">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text">
+                                      <i class="la la-phone"></i>
+                                    </span>
+                                  </div>
+                                  <input type="text" class="form-control form-control-solid form-control-lg" name="number_document" [(ngModel)]="collaborator.number_document" placeholder="Number document"/>
+                                </div>
+
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Position*</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <select name="role" required class="form-control form-control-solid form-control-lg" [(ngModel)]="collaborator.role">
+                                  <option value="" selected disabled>Select one position</option>
+                                  <option value="Administrador">Administrador</option>
+                                  <option value="Calidad">Calidad</option>
+                                  <option value="Marketing">Marketing</option>
+                                  <option value="Asesor">Asesor</option>
+                                </select>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                            <!--begin::Group-->
+                            <div class="form-group row">
+                              <label class="col-xl-3 col-lg-3 col-form-label">Country</label>
+                              <div class="col-lg-9 col-xl-9">
+                                <select name="country" class="form-control form-control-solid form-control-lg" [(ngModel)]="collaborator.country">
+                                  <option value="" selected disabled>Select one country</option>
+                                  <option value="Argentina">Argentina</option>
+                                  <option value="Bolivia">Bolivia</option>
+                                  <option value="Brasil">Brasil</option>
+                                  <option value="Chile">Chile</option>
+                                  <option value="Colombia">Colombia</option>
+                                  <option value="Costa Rica">Costa Rica</option>
+                                  <option value="Cuba">Cuba</option>
+                                  <option value="Ecuador">Ecuador</option>
+                                  <option value="El Salvador">El Salvador</option>
+                                  <option value="España">España</option>
+                                  <option value="Estados Unidos">Estados Unidos</option>
+                                  <option value="Guatemala">Guatemala</option>
+                                  <option value="Haití">Haití</option>
+                                  <option value="Honduras">Honduras</option>
+                                  <option value="México">México</option>
+                                  <option value="Nicaragua">Nicaragua</option>
+                                  <option value="Panamá">Panamá</option>
+                                  <option value="Paraguay">Paraguay</option>
+                                  <option value="Perú">Perú</option>
+                                  <option value="República Dominican">República Dominican</option>
+                                  <option value="Uruguay">Uruguay</option>
+                                  <option value="Venezuela">Venezuela</option>
+                                  <option value="Otro">Otro</option>
+                                </select>
+                              </div>
+                            </div>
+                            <!--end::Group-->
+                          </div>
+                          <!--end::Wizard Step 1-->
+
+                          <!--begin::Wizard Actions-->
+                          <div class="d-flex justify-content-between border-top pt-10 mt-15">
+                            <div class="mr-2">
+                              <a class="btn btn-light-primary font-weight-bolder px-9 py-4" data-wizard-type="action-prev" [routerLink]="['/collaborator']">Back</a>
+                            </div>
+                            <div>
+                              <button type="submit" class="btn btn-success font-weight-bolder px-9 py-4">Save</button>
+                            </div>
+                          </div>
+                          <!--end::Wizard Actions-->
+                        </div>
+                      </div>
+                    </form>
+                    <!--end::Wizard Form-->
+                  </div>
+                </div>
+              </div>
+              <!--end::Body-->
+            </div>
+          </div>
+          <!--end::Container-->
+        </div>
+        <!--end::Entry-->
+      </div>
+      <!--end::Content-->
+      <!--begin::Footer-->
+      <div class="footer bg-white py-4 d-flex flex-lg-column" id="kt_footer">
+        <!--begin::Container-->
+        <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
+          <!--begin::Copyright-->
+          <div class="text-dark order-2 order-md-1">
+            <span class="text-muted font-weight-bold mr-2">2020©</span>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="text-dark-75 text-hover-primary">Keenthemes</a>
+          </div>
+          <!--end::Copyright-->
+          <!--begin::Nav-->
+          <div class="nav nav-dark">
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">About</a>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">Team</a>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-0">Contact</a>
+          </div>
+          <!--end::Nav-->
+        </div>
+        <!--end::Container-->
+      </div>
+      <!--end::Footer-->
+    </div>
+  </div>
+</div>
+
+
+
