--- a/panel/src/app/components/collaborator/index-collaborator/index-collaborator.component.html
+++ b/panel/src/app/components/collaborator/index-collaborator/index-collaborator.component.html
@@ -1,1 +1,63 @@
-<p>index-collaborator works!</p>
+<div class="d-flex flex-column flex-root">
+  <div class="d-flex flex-row flex-column-fluid page">
+    <app-sidebar></app-sidebar>
+    <div class="d-flex flex-column flex-row-fluid wrapper" id="kt_wrapper">
+      <app-top></app-top>
+      <!--begin::Content-->
+      <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Subheader-->
+        <div class="subheader py-2 py-lg-4 subheader-solid" id="kt_subheader">
+          <div class="container-fluid d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <!--begin::Info-->
+            <div class="d-flex align-items-center flex-wrap mr-2">
+              <!--begin::Page Title-->
+              <h5 class="text-dark font-weight-bold mt-2 mb-2 mr-5">Dashboard</h5>
+              <!--end::Page Title-->
+              <!--begin::Actions-->
+              <div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
+              <span class="text-muted font-weight-bold mr-4">#XRS-45670</span>
+              <a href="#" class="btn btn-light-warning font-weight-bolder btn-sm">Add New</a>
+              <!--end::Actions-->
+            </div>
+            <!--end::Info-->
+
+          </div>
+        </div>
+        <!--end::Subheader-->
+        <!--begin::Entry-->
+        <div class="d-flex flex-column-fluid">
+          <!--begin::Container-->
+          <div class="container">
+            <a [routerLink]="['/collaborator/create']" class="btn btn-primary">New collaborator</a>
+          </div>
+          <!--end::Container-->
+        </div>
+        <!--end::Entry-->
+      </div>
+      <!--end::Content-->
+      <!--begin::Footer-->
+      <div class="footer bg-white py-4 d-flex flex-lg-column" id="kt_footer">
+        <!--begin::Container-->
+        <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
+          <!--begin::Copyright-->
+          <div class="text-dark order-2 order-md-1">
+            <span class="text-muted font-weight-bold mr-2">2020©</span>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="text-dark-75 text-hover-primary">Keenthemes</a>
+          </div>
+          <!--end::Copyright-->
+          <!--begin::Nav-->
+          <div class="nav nav-dark">
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">About</a>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-5">Team</a>
+            <a href="http://keenthemes.com/metronic" target="_blank" class="nav-link pl-0 pr-0">Contact</a>
+          </div>
+          <!--end::Nav-->
+        </div>
+        <!--end::Container-->
+      </div>
+      <!--end::Footer-->
+    </div>
+  </div>
+</div>
+
+
