--- a/panel/src/app/components/login/login.component.html
+++ b/panel/src/app/components/login/login.component.html
@@ -1,1 +1,41 @@
-<p>login works!</p>
+<div class="d-flex flex-column flex-root" style="height:100vh; background-color: #b4dfff;">
+  <!--begin::Login-->
+  <div class="login login-signin-on login-2 d-flex flex-row-fluid" id="kt_login">
+    <div class="d-flex flex-center bgi-size-cover bgi-no-repeat flex-row-fluid">
+      <div class="login-form text-center  p-7 position-relative overflow-hidden">
+        <!--begin::Login Header-->
+        <div class="d-flex flex-center mb-15">
+          <a href="#">
+            <img src="assets/media/logos/logo-letter-9.png" class="max-h-100px" alt="" />
+          </a>
+        </div>
+        <!--end::Login Header-->
+        <!--begin::Login Sign in form-->
+        <div class="login-signin" style="min-width: 385px;">
+          <div class="mb-20">
+            <h3>Sign In To Admin</h3>
+            <p class="opacity-60 font-weight-bold ">Enter your details to login to your account:</p>
+          </div>
+          <form class="form">
+            <div class="form-group">
+              <input class="form-control h-auto  placeholder-white opacity-70 bg-dark-o-70 rounded-pill border-0 py-4 px-8 mb-5" type="text" placeholder="Email" name="email" [(ngModel)]="user.email" autocomplete="off" />
+            </div>
+            <div class="form-group">
+              <input class="form-control h-auto  placeholder-white opacity-70 bg-dark-o-70 rounded-pill border-0 py-4 px-8 mb-5" type="password" placeholder="Password" name="password" [(ngModel)]="user.password" />
+            </div>
+            <div class="form-group d-flex flex-wrap justify-content-between align-items-center px-8">
+              <label class="checkbox checkbox-outline checkbox-white  m-0">
+                <input type="checkbox" name="remember" />Remember me
+                <span></span></label>
+            </div>
+            <div class="form-group text-center mt-10">
+              <button id="kt_login_signin_submit" (click)="login()" type="button" class="btn btn-pill btn-primary font-weight-bold opacity-90 px-15 py-3">Sign In</button>
+            </div>
+          </form>
+        </div>
+        <!--end::Login Sign in form-->
+      </div>
+    </div>
+  </div>
+  <!--end::Login-->
+</div>
