--- a/panel/src/app/components/sidebar/sidebar.component.html
+++ b/panel/src/app/components/sidebar/sidebar.component.html
@@ -77,8 +77,8 @@
             </ul>
           </div>
         </li>
-        <li class="menu-item" aria-haspopup="true">
-          <a target="_blank" href="https://keenthemes.com/metronic/preview/demo1/builder.html" class="menu-link">
+        <li class="menu-item" aria-haspopup="true" routerLinkActive="menu-item-active" >
+          <a [routerLink]="['/collaborator']" class="menu-link">
 										<span class="svg-icon menu-icon">
 											<!--begin::Svg Icon | path:assets/media/svg/icons/Home/Library.svg-->
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -90,11 +90,9 @@
 											</svg>
                       <!--end::Svg Icon-->
 										</span>
-            <span class="menu-text">Builder</span>
+            <span class="menu-text">Collaborator</span>
           </a>
         </li>
-
-
       </ul>
       <!--end::Menu Nav-->
     </div>
